--- a/my-portfolio/src/components/Navbar.css
+++ b/my-portfolio/src/components/Navbar.css
@@ -144,6 +144,7 @@
     box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.69);
     overflow: hidden;
     transform-origin: center;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.69);
   }
 
   .navbar-item.post {
