--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -14,6 +14,10 @@ body {
   color:#f1e4d2;
 }
 
+p {
+  white-space: pre-line;
+}
+
 .background {
   pointer-events: none;
   z-index: -10;
@@ -124,6 +128,12 @@ body {
   overflow-x: hidden;
 }
 
+.post-box {
+  width:75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* width */
 .post-container::-webkit-scrollbar {
   width: 0.7vw;
@@ -176,8 +186,33 @@ body {
   color:#f1e4d2;
 }
 
+.post-container img {
+  transition: all 0.4s ease;
+}
+
+.post-container img:hover {
+  /* transform: scale(2,  2); */
+}
+
+.row {
+  display: flex;
+  padding-left:2vw;
+  padding-right:2vw;
+  justify-content:center;
+  align-items:center;
+  flex-wrap: wrap;
+}
+
+.column {
+  float:left;
+  width:auto;
+  height:100%;
+  padding:5px;
+  max-width: 100%;
+}
+
 #main {
-  background: linear-gradient(90deg, rgba(73, 38, 26, 0) 0%, rgba(53, 25, 14, 0.466) 5%, rgba(26, 13, 4, 0.856) 40%, rgb(19, 9, 2) 80%);
+  background: linear-gradient(90deg, rgba(73, 38, 26, 0) 0%, rgba(53, 25, 14, 0.466) 13%, rgba(26, 13, 4, 0.856) 40%, rgb(19, 9, 2) 80%);
   padding:0%;
   animation: fade 1s linear;
   z-index: 1;
@@ -191,5 +226,17 @@ body {
 @media only screen and (max-width: 920px) {
   .home-container {
     display: none;
+  }
+
+  .row {
+    height:auto;
+  }
+
+  .post-box {
+    width: 100%;
+  }
+
+  #main {
+    background: linear-gradient(90deg, rgba(73, 38, 26, 0) 0%, rgba(53, 25, 14, 0.466) 5%, rgba(26, 13, 4, 0.856) 40%, rgb(19, 9, 2) 80%);
   }
 }
