--- a/my-portfolio/src/components/Navbar.css
+++ b/my-portfolio/src/components/Navbar.css
@@ -79,7 +79,6 @@
     z-index: 10;
     left: 50%;
     top: 50%;
-    filter: blur(0px);
   }
 
   .logo-small {
@@ -92,6 +91,14 @@
     height:auto;
     transition: all 1s ease;
     z-index: 10;
+    filter:brightness(1);
+  }
+
+  .logo-small:hover {
+    transition: all 0.2s ease;
+    transform:scale(1.1,1.1);
+    filter:brightness(1.2);
+
   }
 
   .navbar-circle {
@@ -142,7 +149,7 @@
     pointer-events: auto; 
     border-style: solid;
     border-width: 2px;
-    border-radius: 50px;
+    border-radius: 50px 15px;
     box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.69);
     overflow: hidden;
     transform-origin: center;
@@ -207,6 +214,14 @@
     rotate: 180deg;
   }
 
+  .scroll-button.post.top {
+    top:22%;
+  }
+  
+  .scroll-button.post.bottom {
+    bottom: 15%;
+  }
+
   @media only screen and (max-width: 920px) {
     .navbar-home {
       width:100vw;
@@ -229,6 +244,10 @@
       width:70vw
     }
     .scroll-button {
-      width:10%;
+      width:10vw;
+    }
+
+    .scroll-button.post {
+      display:none;
     }
   }
